--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <!-- 4.Part My Projects (4.Foto) div4 -->
-    <div class="row" style="padding: 0 10% 0 10%;">
+    <div class="row" style="padding: 5% 10%;">
 
         <h1 id="myprojects">My Projects</h1>
 
@@ -164,7 +164,7 @@
                 <h2 style="color: #253b6e;">GitHub Wellcome</h2>
                 <img src="images/github3-images.jpg" alt="resim">
                 <p style="color: #253b6e;">This Procekt is my first GitHub Procekt.That is very important for me.</p>
-                <h3 style="background: #253b6e; color: #d2ecf9;">Learn More</h3>
+                <h3 style="background: #253b6e;">Learn More</h3>
             </div>
         </div>
 
@@ -173,7 +173,7 @@
                 <h2 style="color: #1f5f8b;">HTML Starter</h2>
                 <img src="images/html5-image.jpg" alt="resim">
                 <p style="color: #1f5f8b;">HTML Procekt.That is very important for me.</p>
-                <h3 style="background: #1f5f8b; color: #d2ecf9;">Learn More</h3>
+                <h3 style="background: #1f5f8b;">Learn More</h3>
             </div>
         </div>
 
@@ -182,7 +182,7 @@
                 <h2 style="color: #1891ac;">CSS Awesome</h2>
                 <img src="images/css-image.jpg" alt="resim">
                 <p style="color: #1891ac;">This Procekt is my nice CSS Procekt.That is very important for me.</p>
-                <h3 style="background: #1891ac; color: #d2ecf9;">Learn More</h3>
+                <h3 style="background: #1891ac;">Learn More</h3>
             </div>
         </div>
     </div>
